# CA2_lab4

./: CMakeLists.txt  Makefile  cpp_demo
include/: calculator.h
src/: calculator.cpp  main.cpp
